tests/inference/Generics/Typename/noBareTypenameCrash/output.txt
ERROR: UnrecognizedType - input.hack:1:29 - Hakana does not understand this type